# reachy_mini_local_companion

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.claude/: example.settings.local.json
.claude/commands/: create-reference.md  defect.md  feature.md  implement.md  prime-reference-links.md  prime.md  split-spec.md  task.md  update-spec-metadata.md
.claude/references/: METADATA-SPEC.md  README-TEMPLATE.md  README.md  REFERENCE-TEMPLATE.md
.claude/references/ai/: README.md
.claude/references/ai/a2a/: overview.md  security-implementation.md  specification.md
.claude/references/claude/: README.md  mcp-integration.md  slash-commands.md
.claude/references/commands/: COMMAND-METADATA-SPEC.md
.claude/references/models/: README.md  gpt-5-nano.md  gpt_oss_120b.md
.claude/references/observability/: README.md  genai-semantic-conventions.md  opentelemetry-best-practices.md  semantic-conventions.md
.claude/references/observability/arize/: README.md  docker-compose-deployment.md  span-kinds-reference.md  tracing-links.md
.claude/references/observability/sentry/: README.md  self-hosted-deployment.md
.claude/references/python/: README.md
.claude/references/python/click/: README.md  click-framework-guide.md
.claude/references/python/dev-tools/: README.md
.claude/references/python/fastapi/: README.md  fastapi-framework-guide.md
.claude/references/python/pydantic/: README.md  pydantic-library-guide.md
.claude/references/python/pydantic-ai/: README.md  a2a-integration.md  agents.md  openai-integration.md  phoenix-integration.md  pydantic-ai-links.md  tools.md
.claude/references/python/search/: README.md  bm25-ranking-guide.md  inverted-index-guide.md  tf-idf-implementation-guide.md
.claude/references/robotics/: README.md
.claude/references/sbom/: cyclonedx_1_6.md  cyclonedx_1_7.md
.claude/references/specs/: SPEC-METADATA-SPEC.md
.claude/references/ts/biome/: README.md  (+2 more)
.claude/test-fixtures/: command-example.md  config.json  docker-guide.md  frontmatter-test.md  many-tags.md  minimal.md  simple.md  spec-example.md  status-archived.md  status-deprecated.md  status-draft.md  status-review.md  status-stable.md
reachy_mini_local_companion/: emotions.py  main.py
reachy_mini_local_companion/llm/: __init__.py  agent.py  models.py  profiles.py
reachy_mini_local_companion/static/: index.html  main.js  style.css
reachy_mini_local_companion/stt/: __init__.py  audio_processor.py  base.py  manager.py  vosk_engine.py  wake_word.py  whisper_engine.py
reachy_mini_local_companion/tts/: __init__.py  engine.py  models.py  voice_manager.py
specs/: defect-tflite-runtime-python312-incompatibility.md  emotion-display.md  llm-chat-with-profiles.md  speaker-volume-control.md  speech-to-text.md  text-to-speech.md  vision-system.md
(+53 files in other folders)
