[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_local_companion"
version = "0.1.0"
description = "Reachy Mini Local Companion - Volume Control Testing Only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    # Volume control uses TTS for testing speaker output
    "piper-tts>=1.2.0",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_local_companion = "reachy_mini_local_companion.main:ReachyMiniLocalCompanion"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_local_companion = ["**/*"]

# Feature flags for this branch: Volume control + TTS for speaker testing
# Set in environment or use defaults in main.py
