[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_local_companion"
version = "0.1.0"
description = "Reachy Mini Local Companion - Vision System Testing (Placeholder)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    # Vision dependencies - to be added when vision module is implemented
    # "opencv-python>=4.8.0",
    # "ultralytics>=8.0.0",  # For YOLO object detection
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_local_companion = "reachy_mini_local_companion.main:ReachyMiniLocalCompanion"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_local_companion = ["**/*"]

# Feature flags for this branch: Vision system (not yet implemented)
# Set in environment or use defaults in main.py
